--- a/Resources/views/Demo/details.html.twig
+++ b/Resources/views/Demo/details.html.twig
@@ -11,7 +11,7 @@
 
 <script type="text/javascript">
     // This identifies your website in the createToken call below
-    Stripe.setPublishableKey('pk_test_czwzkTp2tactuLOEOqbMTRzG');
+    Stripe.setPublishableKey('{{ stripe.publishable_key }}');
 
     var stripeResponseHandler = function(status, response) {
         var $form = $('#payment-form');
