--- a/Resources/views/Demo/details.html.twig
+++ b/Resources/views/Demo/details.html.twig
@@ -4,7 +4,8 @@
 
 {% block javascripts %}
 <!-- The required Stripe lib -->
-<script type="text/javascript" src="https://js.stripe.com/v2/"></script>
+{#<script type="text/javascript" src="https://js.stripe.com/v2/"></script>#}
+<script type="text/javascript" src="https://js.stripe.com/v2/stripe-debug.js"></script>
 
 <!-- jQuery is used only for this example; it isn't required to use Stripe -->
 <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
